Added more test utilities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,16 @@
   "files.trimTrailingWhitespace": true,
   "editor.tabSize": 2,
   "editor.rulers": [ 150 ],
-  "eslint.validate": [ "javascript", "typescript" ],
+  "eslint.validate": [
+    "javascript",
+    "typescript"
+  ],
+  "cSpell.words": [
+    "xorshift"
+  ],
+  "cSpell.ignoreWords": [
+    "Durstenfeld",
+    "Marsaglia"
+  ],
 }
 /* vim: set filetype=javascript ts=2 sw=2 expandtab : */
